@startuml

  class Main {
    + main(args : String[]) : void
  }

  class SimulationEngine {
    - board : Board
    - chance : Deck
    - chest : Deck
    - dice : Dice
    - totalMoves : int
    + runAllSims() : void
    + runSimulation(strategy : Strategy, sim : int) : void
    + takeTurn(player : Player, strategy : Strategy) : void
    + move(player : Player, steps : int) : void
    + resolve(player : Player) : void
    + sendToJail(player : Player) : void
    + handleJail(player : Player, strategy : Strategy) : void
    
  }

  Enum Strategy {
    A 
    B 
  }
  
  note right of Strategy
  A = Immediate Exit
  B = Try for Doubles Roll
  end note

  class ResultAnalyzer {
    + analyzeTopSquares(squares : List<Square>) : List<Square>
    + printResults(squares : List<Square>) : void
    + save(board : Board, strategy : Strategy, sim : int, turns : int) : void
  }


  class Board {
    - squares : List<Square>
    + buildBoard() : void
    + getPosition(pos : int) : Square
    + getAllSquares() : List<Square>
    + resetCounts() : void
    + nearestRailroad(pos : int) : int
    + nearestUtility(pos : int) : int
  }

  abstract class Square {
    - name : String
    - index : int
    - type : String
    - visitCount : int
    + Square(index : int, name: String, type: String)
    + land() : void
    + getCount() : int
    + incrementVisit() : void
    + resetCount() : void
  }


  class Card {
    - type : String
    - value : int
    + Card(type : String, value : int)
    + apply(player : Player, engine : SimulationEngine) : boolean
    
  }

  class Deck {
    - draw : List<Card>
    - discard : List<Card>
    + Deck(cards : List<Card>)
    + drawCard() : Card
    + reshuffle() : void
    + createChest() : List<Card> {static}
    + createChance() : List<Card> {static}
  }

  class Player {
    - position : int
    - inJail : boolean
    - jailTurns : int
    - doublesCount : int
    - getOutOfJailCards : int
    + resetDoubles() : void
  }




  class Dice {
    - rand : RandomGenerator
    + roll() : int
  }


' Entry point
Main --> SimulationEngine

' Core engine ownership (composition)
SimulationEngine *-- Board
SimulationEngine *-- Deck : chance
SimulationEngine *-- Deck : chest
SimulationEngine *-- Dice

' Engine uses these
SimulationEngine --> Player
SimulationEngine --> Strategy
SimulationEngine --> ResultAnalyzer

' Board structure
Board *-- Square

' Deck structure
Deck *-- Card

' Card behavior dependencies
Card --> Player
Card --> SimulationEngine

' Result processing
ResultAnalyzer --> Square

@enduml
